# MCYEngine

./: .gitignore  CMakeLists.txt  build.bat  clean.bat  compile_shaders.bat  test.cpp
src/: main.cpp  mcy_helpers.h  obj_loader.cpp  shader.slang  vulkan_layer.cpp
